--- a/Ejemplo039-AngularJS-Relojeria/Web/index.html
+++ b/Ejemplo039-AngularJS-Relojeria/Web/index.html
@@ -10,7 +10,7 @@
 
 	<div class="navbar navbar-inverse">
 		<a class="navbar-brand" href="#">
-			Relojeria OnLine
+			Relojería OnLine
 		</a>
 	</div>
 
